welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: Unit does not take parameters
	    growFlowers();
                       ^FlowerPot:11: error: not found: value setCOuleurBrosse
  setCOuleurBrosse(Color.yellow)
  ^FlowerPot:31: error: not found: value COlor
  faitPousserFleur(COlor.pink)
                   ^